# cantus-firmus

./: .gitignore  CF Solver.ipynb  pyproject.toml
cfsolver/: cf_above.py  cf_any.py  cf_below.py  constraints.py  note.py
