[tool.poetry]
name = "cantus-firmus"
version = "0.1.0"
description = "Species counterpoint solver"
authors = ["kureta <skureta@gmail.com>"]
license = "GPL"
readme = "README.md"
packages = [{include = "cantus_firmus"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
matplotlib = "^3.6.2"
numpy = "^1.23.5"
music21 = "^8.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
